--- a/Atividade1/Atividade1.csproj
+++ b/Atividade1/Atividade1.csproj
@@ -9,4 +9,14 @@
       <_ContentIncludedByDefault Remove="wwwroot\img\account-avatar-profile-human-man-user-30448.png" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.13" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.13" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.13">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+    </ItemGroup>
+
 </Project>
