--- a/Atividade1/appsettings.Development.json
+++ b/Atividade1/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  
+  "ConnectionStrings": {
+    "BuffetDb": "Server=localhost; User=root; Password=brotherhood; Database=pwa_ativ"
   }
 }
