--- a/Atividade1/appsettings.json
+++ b/Atividade1/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "BuffetDb": "Server=localhost; User=root; Password=brotherhood; Database=pwa_buffet"
+  }
 }
